--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -19,23 +19,10 @@
 
 <body>
 	<div class="container">
-		<h1>My HCI Friends</h1>
-
-		<form id="addFriendForm" role="form" method="get" action="/add">
-			<h3>Add a friend</h3>
-		    <div class="form-group">
-		      <label for="name">Name:</label>
-		      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
-		    </div>
-		    <div class="form-group">
-		      <label for="description">Description:</label>
-		      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
-		    </div>
-		    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
-		</form>
+		<h1>Cool, you added {{name}} as a new Friend!</h1>
+		<a href="/" class="btn btn-primary">Go home</a>
 		<hr />
 		<div class="row">
-			{{#each friends}}
 			<div class="col-xs-3 friend-panel">
 				<div class="panel panel-default">
 					<div class="panel-heading"><a href="#" class="thefriend">{{name}}</a></div>
@@ -45,7 +32,6 @@
 					</div>
 				</div>
 			</div>
-			{{/each}}
 		</div>
 	</div>
 	<script src="js/jquery-1.11.0.js"></script>
